fix anchor jumps on mobile

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -384,6 +384,13 @@ main {
     margin-top: 4rem;
   }
 
+  a.anchor { /* Fix jump to anchor relative to header/masthead */
+    // https://stackoverflow.com/questions/10732690/offsetting-an-html-anchor-to-adjust-for-fixed-header
+    display: block;
+    position: relative;
+    top: -13rem; //  Variable wud b nice <———————————————————————————————————— ;
+    visibility: hidden;
+  }
   /* Sections allgemein {{{2 */
   section {
     background: $white;
@@ -393,13 +400,6 @@ main {
     margin: 0 auto;
     h3 {
       margin: 0 0 0.5rem 0;
-    }
-    a.anchor { /* Fix jump to anchor relative to header/masthead */
-      // https://stackoverflow.com/questions/10732690/offsetting-an-html-anchor-to-adjust-for-fixed-header
-      display: block;
-      position: relative;
-      top: -13rem; //  Variable wud b nice <———————————————————————————————————— ;
-      visibility: hidden;
     }
   }
   /* End Sections Allgemein }}}2 */
@@ -1009,6 +1009,9 @@ footer {
     }
     /* End Mobile Calendar Layout }}}3 */
 
+    a.anchor {
+      top: -6rem;
+    }
     section {
       margin-bottom: 3rem;
       padding: 0;
